--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 </div>             
 </div>               
 <div class="parametro-senha">                
-<h4 class="parametro-senha__titulo">Características da senha</h4>              
+<h4 class="parametro-senha__titulo">Características da senha</h4>   
+<div class="parametro-senha">
+    <h4 class="parametro-senha__titulo">caracteristicas da senha</h4>
+</div>           
 </div>              
 <div class="parametro-senha">                  
 <h4 class="parametro-senha__titulo">Força da senha</h4>              
