--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <div class="barra"></div>
+                    <div class="forca forte"></div>
+                    <div class="parametro-senha-textos">
+                        <p>fraca</p>
+                        <p>media</p>
+                        <p>forte</p>    
                 </div>
             </div>
         </div>
